# zkvm-blueprint

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  blueprint.json  remappings.txt  rust-toolchain.toml
contracts/src/: Elf.sol  HelloBlueprint.sol  ImageID.sol  ZkvmBlueprint.sol
docker/: entrypoint.sh
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
src/: lib.rs  main.rs
